# agent-skills-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  流动的星空_算法哲学.md
.github/workflows/: ci.yml
docs/: TECHNICAL_GUIDE.md  architecture.drawio  gen_arch.py  gen_drawio.py  skillkit-execution-flow.drawio  test-minimal.drawio
examples/: agent_demo.py  code_mode_demo.py  test_skills.py
examples/skills/github/: SKILL.md
examples/skills/pdf/: SKILL.md
skills/hello/: SKILL.md
skills/pptx/: SKILL.md
src/agent_skills_engine/: __init__.py  agent.py  cli.py  commands.py  config.py  context.py  context_files.py  engine.py  events.py  logging.py  model_registry.py  models.py  models_catalog.py  prompts.py
src/agent_skills_engine/adapters/: __init__.py  anthropic.py  (+3 more)
src/skillkit/: __init__.py  agent.py  cache.py  cli.py  commands.py  context.py  context_files.py  engine.py  events.py  logging.py  model_registry.py  models.py  models_catalog.py  prompts.py
templates/: viewer.html
tests/: __init__.py  conftest.py  test_action_tool_dispatch.py  test_actions.py  test_adapter_registry.py  test_adapters.py  test_autocomplete.py  test_boxlite_runtime.py  test_cache.py  test_cli.py  test_code_mode_runtime.py  test_commands.py  test_config.py  test_context.py  test_context_files.py  test_cross_provider.py  test_engine.py  test_events.py  test_extension_tool_dispatch.py  test_extensions.py  test_filters.py  test_image_vision.py  test_json_mode.py  test_keybindings.py  test_loader.py  test_memory_client.py  test_memory_extension.py  test_memory_hooks.py  test_memory_tools.py  test_model_registry.py  test_packages.py  test_partial_json.py  test_prompts.py  test_rpc_mode.py  test_runtime_streaming.py  test_sandboxed_runner.py  test_session.py  test_skill_tool.py  test_steering_abort.py  test_stream_events.py  (+5 more)
(+124 files in other folders)
