[project]
name = "agent-skills-engine"
version = "0.1.0"
description = "A standalone skills execution engine for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Alex Zhang", email = "alex@example.com" }
]
keywords = ["llm", "agent", "skills", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "watchfiles>=0.21",
    "rich>=13.0",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "pypdf>=6.6.2",
    "pillow>=12.1.0",
    "markitdown[pptx]>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]

[project.urls]
Homepage = "https://github.com/alexzhang2015/agent-skills-engine"
Repository = "https://github.com/alexzhang2015/agent-skills-engine"

[project.scripts]
skills = "agent_skills_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_skills_engine"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
